# TradingView

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
Docs/: FABLE5_PHASE3_AI_BRAIN_PROMPT.md  GITHUB_WORKFLOW.md  HISTORY_DEPTH.md  NORTH_STAR_DESK.md  PHASE2B_PROBLEM_STATEMENT.md  PHASE2B_PROMOTION_STUDY_2026-07-11.md  PHASE2B_SOLUTION_DESIGN.md  PHASE2_STRATEGY_PACK.md  PHASE3_AI_BRAIN_PROBLEM_STATEMENT.md  PHASE3_AI_BRAIN_RUNBOOK.md  PHASE3_AI_BRAIN_SOLUTION_DESIGN.md  RESEARCH.md  SESSION_RECAP_AI_BRAIN_HUB_2026-07-12.md  YEAR_AHEAD_BASE.md  fable5_run_memory.md
config/: assets.toml  providers.toml
scripts/: backfill_fundamentals.py  deepen_history.py  live_ai_card_smoke.py  rebuild_price_source.py  run_quality_momentum_study.py
tests/: conftest.py  helpers.py  hooks_momentum.py  synthetic.py  test_ai_hub_llm_seam.py  test_ai_hub_security.py  test_benchmark.py  test_brain_loop.py  test_brain_store.py  test_calendar.py  test_citations_and_projection.py  test_cli.py  test_closed_loop.py  test_closed_loop_production.py  test_factors_engine.py  test_factors_math.py  test_fundamentals.py  test_gates.py  test_kronos_reserved.py  test_models.py  test_models_validation.py  test_normalization.py  test_package_invariants.py  test_paper.py  test_polygon.py  test_property_adjustment_mapping.py  test_property_ai_hub_cards.py  test_property_duplicate_pk.py  test_property_evidence.py  test_property_ingestion.py  test_property_market_calendar.py  test_property_no_fabrication.py  test_property_no_secrets.py  (+13 more)
(+87 files in other folders)
