[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-data"
version = "0.1.0"
description = "Provider-agnostic market data ingestion and quality auditing for research"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "duckdb>=0.9",
    "typer>=0.9",
    "tomli>=2.0;python_version<'3.11'",
    "hypothesis>=6.0",
    "pytest>=7.0",
    "exchange_calendars>=4.5",
    # Phase 3 LLM seam — imported lazily and only inside agents/llm_client.py (C4).
    "litellm>=1.60",
    "instructor>=1.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
